--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_edit.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_edit.html
@@ -37,6 +37,7 @@
     <div class="row">
         {% render_field form.maintenance_mode %}
         {% render_field form.handling_unit %}
+        {% render_field form.contract %}
         {% render_field form.dispatch_time %}
         {% render_field form.departure_time %}
         {% render_field form.arrival_time %}
