名称类修改

--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_edit.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_edit.html
@@ -32,7 +32,7 @@
 
 <div class="field-group my-5">
     <div class="row mb-3">
-        <h2 class="col-9 offset-3 mb-0">光缆中断处理信息</h2>
+        <h2 class="col-9 offset-3 mb-0">光缆中断补充信息</h2>
     </div>
     <div class="row">
         {% render_field form.maintenance_mode %}
