--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault.html
@@ -28,7 +28,7 @@
           <td>{{ object.fault_number|default:"—" }}</td>
         </tr>
         <tr>
-          <th scope="row">故障状态</th>
+          <th scope="row">处理状态</th>
           <td>
             {% if object.fault_status %}
             {% badge object.get_fault_status_display bg_color=object.get_fault_status_color %}
@@ -159,7 +159,7 @@
           </td>
         </tr>
         <tr>
-          <th scope="row">故障及处置详情</th>
+          <th scope="row">故障详情和处理过程</th>
           <td>{{ object.fault_details|default:"—" }}</td>
         </tr>
       </table>
@@ -179,7 +179,7 @@
   <div class="col col-md-6">
     <!-- 处理信息组 -->
     <div class="card">
-      <h5 class="card-header">光缆中断处理信息</h5>
+      <h5 class="card-header">光缆中断补充信息</h5>
       <table class="table table-hover attr-table">
         <tr>
           <th scope="row">维护方式</th>
