--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_edit.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_edit.html
@@ -44,6 +44,7 @@
         {% render_field form.timeout %}
         {% render_field form.timeout_reason %}
         {% render_field form.handler %}
+        {% render_field form.cable_break_location %}
         {% render_field form.recovery_mode %}
     </div>
 </div>
