--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_edit.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_edit.html
@@ -13,6 +13,7 @@
         {% render_field form.fault_status %}
         {% render_field form.urgency %}
         {% render_field form.province %}
+        {% render_field form.interruption_location_a %}
         {% render_field form.interruption_location %}
         {% render_field form.interruption_longitude %}
         {% render_field form.interruption_latitude %}
