故障地图的Globe模式

--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_list.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_list.html
@@ -5,4 +5,7 @@
 <a href="{% url 'plugins:netbox_otnfaults:otnfault_map' %}" class="btn btn-info">
     <i class="mdi mdi-map" aria-hidden="true"></i> 查看故障分布图
 </a>
+<a href="{% url 'plugins:netbox_otnfaults:otnfault_map_globe' %}" class="btn btn-success">
+    <i class="mdi mdi-earth" aria-hidden="true"></i> 测试
+</a>
 {% endblock %}
