--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
@@ -36,7 +36,10 @@
 <script src="https://unpkg.com/maplibre-gl@5.4.0/dist/maplibre-gl.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/maplibre-gl@5.4.0/dist/maplibre-gl.js"></script>
 
-<link rel="stylesheet" href="{% static 'netbox_otnfaults/css/otnfault_map_globe.css' %}">
+<link
+  rel="stylesheet"
+  href="{% static 'netbox_otnfaults/css/otnfault_map_globe.css' %}"
+/>
 
 <script>
   window.OTNFaultMapConfig = {
@@ -46,5 +49,5 @@
   };
 </script>
 <script src="{% static 'netbox_otnfaults/js/maplibregl_base.js' %}"></script>
-<script src="{% static 'netbox_otnfaults/js/otnfault_map_app.js' %}"></script>
+<script src="{% static 'netbox_otnfaults/js/otnfault_map_app.js' %}?v=6"></script>
 {% endblock %}
