使用站点经纬度信息来替代arcgis站点数据

--- a/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
+++ b/netbox_otnfaults/templates/netbox_otnfaults/otnfault_map_globe.html
@@ -45,9 +45,10 @@
   window.OTNFaultMapConfig = {
       heatmapData: {{ heatmap_data| safe }},
       markerData: {{ marker_data| safe }},
+      sitesData: {{ sites_data| safe }},
       apiKey: "{{ apikey }}"
   };
 </script>
 <script src="{% static 'netbox_otnfaults/js/maplibregl_base.js' %}"></script>
-<script src="{% static 'netbox_otnfaults/js/otnfault_map_app.js' %}?v=6"></script>
+<script src="{% static 'netbox_otnfaults/js/otnfault_map_app.js' %}?v=8"></script>
 {% endblock %}
